<resources>
    <string name="app_name">Pengurus Komunitas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="member_unverified">Unverified Member</string>
    <string name="member_verified">Verified Member</string>
    <string name="member_deleted">Deleted Member</string>
    <string name="account_edit">Edit Community</string>
    <string name="account_log_out">Log Out</string>
    <string name="member">Member</string>
    <string name="account">Account</string>
    <string name="status_not_verified">Not Verified</string>
    <string name="member_detail">Member Detail</string>
    <string name="welcome_admin">Welcome Community Admin</string>
    <string name="login_quotes">May the force be with you</string>
    <string name="login">Admin Komunitas</string>
    <string name="please_wait">Please wait a moment..</string>
    <string name="edit_community">Edit Community</string>
    <string name="community_name">Community name</string>
</resources>
